--- a/carros-ui/src/app/componentes/footer/footer.component.html
+++ b/carros-ui/src/app/componentes/footer/footer.component.html
@@ -1,3 +1,6 @@
-<p>
-  footer works!
-</p>
+<footer>
+  <img *ngIf="logoFooter" class="logo" [src]="logoFooter" />
+	<p>©{{ano}} Yure Kesley </p>
+	<p>Todos os direitos reservados</p>
+	<p>Versão {{versao}}</p>
+</footer>
