--- a/carros-ui/src/app/app.component.html
+++ b/carros-ui/src/app/app.component.html
@@ -1,7 +1,5 @@
-<router-outlet></router-outlet>
+<app-nav-bar></app-nav-bar>
 
+  <router-outlet></router-outlet>
 
-<app-footer
-[ano]="'2019'"
-[versao]="'1.0.0'">
-</app-footer>
+<app-footer [ano]="'2019'" [versao]="'1.0.0'"> </app-footer>
