camada http front

--- a/carros-ui/src/app/app.component.html
+++ b/carros-ui/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-nav-bar></app-nav-bar>
 
+<div class="container">
   <router-outlet></router-outlet>
+</div>
 
 <app-footer [ano]="'2019'" [versao]="'1.0.0'"> </app-footer>
