criando modulo de cadastro de carros

--- a/carros-ui/src/app/app.component.html
+++ b/carros-ui/src/app/app.component.html
@@ -1,7 +1,5 @@
-<app-nav-bar></app-nav-bar>
+<app-nav-bar [menu]="menu"></app-nav-bar>
 
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+<router-outlet></router-outlet>
 
 <app-footer [ano]="'2019'" [versao]="'1.0.0'"> </app-footer>
