--- a/carros-ui/src/app/paginas/carros/carros.component.html
+++ b/carros-ui/src/app/paginas/carros/carros.component.html
@@ -16,7 +16,7 @@
                     <mat-icon>more_vert</mat-icon>
                   </button>
                   <mat-menu #menu="matMenu">
-                    <button mat-menu-item>
+                    <button mat-menu-item (click)="editar(item.id)">
                       <mat-icon>edit</mat-icon>
                       <span>Editar</span>
                     </button>
