--- a/carros-ui/src/app/paginas/carros/carros.component.html
+++ b/carros-ui/src/app/paginas/carros/carros.component.html
@@ -20,7 +20,7 @@
                       <mat-icon>edit</mat-icon>
                       <span>Editar</span>
                     </button>
-                    <button mat-menu-item>
+                    <button mat-menu-item (click)="deletar(item.id)">
                         <mat-icon>delete</mat-icon>
                         <span>Deletar</span>
                       </button>
